# MagiskModuleTemplate

./: build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/cpp/: CMakeLists.txt  resources.rc.in
